2007-08-26  Badlop  <badlop@ono.com>

	* README.txt: Added important message to encourage users to move to mod_webpresence.

	* src/mod_presence.erl: Preliminary support for hashed JIDs. Added support for HOST keyword, and removed unusued Access variables. Added basic page to Web Admin.

2007-08-25  Badlop  <badlop@ono.com>

	* src/mod_presence.erl: Fixed compilation warnings. Fixed two warnings reported by Dialyzer. Renamed Status and Text to Show and Status. Table index key only needs User and Server. Added id table field and update_table function. XML option is stored as atom instead of string. Cleaned process/2 and show_presence/1. New home page, and icon themes quickview.

2007-08-05  Badlop  <badlop@ono.com>

	* ChangeLog: New file to track changes.

	* src/mod_presence.erl: Fix indentation.

	* src/Makefile.in: Removed unusued file.